# medium-clone-api

./: .env  db.db  pyproject.toml
api/: app.py  security.py  settings.py
api/db/: database.py  models.py  schemas.py
api/routes/: article.py  auth.py  comments.py  favorites.py  profile.py  tag.py  tags.py  user.py
migrations/: env.py
migrations/versions/: 069e37e01bd4_favorites.py  317483585d07_favorites.py  3681b1445ff5_tag_name.py  3a62d2bf6262_remove_article.py  3b318c0501dd_autogeneration_table_user.py  3cb5df1d1adb_comments.py  41a8f0add1b3_models.py  48d40c761d45_tag_model.py  4fe3965d1ecb_remove_article.py  54482b80f35f_articles_id.py  548122cca7a5_favorites.py  5a7b61147c23_tag_name.py  60dfa14f76b1_remove_comments.py  614944e229e6_tag_model.py  6452821575ee_tag_name.py  6603a251a443_comments_delete.py  6b686836e12b_comments.py  70b0d2960163_comments.py  726d8f13d51f_remove_article.py  726dbee1937e_article_id_favorite.py  78874c2162e1_comments.py  7943b59de94d_remove_article.py  7d0d7b56effd_tag_name.py  8263695402cb_tag_name.py  8a55e3765c57_id_autoincremetn.py  aa4313c0ff51_autogeneration_table_user.py  ad9169d34737_tag_model.py  add0c78b0221_remove_article.py  be6f5f3392d9_tag_name.py  d19cb52ed3b6_remove_article.py  d24c2aae1471_comments.py  d341f96286f0_remove_favorites.py  d995958ddda7_tag_model.py  d9c7df0fad17_taglist.py  ddb9129e7df4_comments.py  e51a71f7df5a_remove_favorites.py  e91c72e65e16_remove_article.py  eebcfd6f85ff_favorite_by_id.py  f569b9f76635_remove_article.py  f66bec48ddd2_remove_article.py
